examples/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokendashboard-frontend-service
  namespace: my-namespace
spec:
  selector:
    app: tokendashboard-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
