examples/kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tokendashboard-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: tokendashboard.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tokendashboard-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: tokendashboard-backend-service
                port:
                  number: 8080
  tls:
    - hosts:
        - tokendashboard.example.com
      secretName: tls-wildcard-example
